--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-  <h1>{{ 'ABOUT' | translate }}</h1>
-  <p>{{ 'ABOUT_TEXT' | translate }}</p>
+  <h1 class="display-3">{{ 'ABOUT' | translate }}</h1>
+  <p class="lead">{{ 'ABOUT_TEXT' | translate }}</p>
 </div>
