--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-  <h1>{{ 'WELCOME' | translate }}</h1>
-  <p>{{ 'WELCOME_TEXT' | translate }}</p>
+  <h1 class="display-3">{{ 'WELCOME' | translate }}</h1>
+  <p class="lead">{{ 'WELCOME_TEXT' | translate }}</p>
 </div>
