--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,5 +1,19 @@
 .navbar-brand {
   img {
-    height: 100%;
+    height: 20px;
   }
+}
+
+.navbar-brand {
+  width: 60px;
+  height: 35px;
+}
+
+.navbar-brand img {
+  margin: auto;
+  display: block;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center;
 }
