--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,16 @@
 // Bootstrap
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import '~bootstrap/scss/bootstrap';
 
 // Partials
 @import 'partials/custom';
+
+// Temporary Bootstrap 4 fix
+.navbar {
+  @include media-breakpoint-down(sm) {
+    .navbar-brand {
+      display: block;
+      float: none;
+      height: 40px;
+    }
+  }
+}
