--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top navbar-toggleable-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
   <button class="navbar-toggler navbar-toggler-right" type="button" (click)="isCollapsed = !isCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <a class="navbar-brand" [routerLink]="['/']">
+  <a class="navbar-brand" [routerLink]="'/'">
     <img alt="Logo" src="../../assets/images/logo.png">
   </a>
 
@@ -30,7 +30,8 @@
           <span>{{ 'LANGUAGE' | translate }}</span>
           <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
+
+        <ul ngbDropdownMenu class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
           <button *ngFor="let language of languages"
                   type="button"
                   class="dropdown-item"
